--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,28 @@
         android:theme="@style/Theme.DATN_MD02_ADMIM"
         tools:targetApi="31">
         <activity
+            android:name=".StaffActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdminFragment.ContactFragment"
+            android:exported="false" />
+        <activity
+            android:name=".AdminFragment.HomeFragment"
+            android:exported="false" />
+        <activity
+            android:name=".AdminActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StartActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
