--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.DATN_MD02_ADMIM"
         tools:targetApi="31">
         <activity
+            android:name=".EditPromotionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SelectProductActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddPromotionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StaffListActivity"
+            android:exported="false" />
+        <activity
             android:name=".StaffActivity"
             android:exported="false" />
         <activity
