--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.datn_md02_admim">
+
+    <!-- Quyền nhận thông báo -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -12,48 +16,35 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DATN_MD02_ADMIM"
         tools:targetApi="31">
-        <activity
-            android:name=".EditPromotionActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SelectProductActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AddPromotionActivity"
-            android:exported="false" />
-        <activity
-            android:name=".StaffListActivity"
-            android:exported="false" />
-        <activity
-            android:name=".StaffActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AdminFragment.ContactFragment"
-            android:exported="false" />
-        <activity
-            android:name=".AdminFragment.HomeFragment"
-            android:exported="false" />
-        <activity
-            android:name=".AdminActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".StartActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SplashActivity"
-            android:exported="true">
+
+        <!-- Firebase Cloud Messaging Service -->
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <!-- Activities -->
+        <activity android:name=".ChatActivity" android:exported="false" />
+        <activity android:name=".EditPromotionActivity" android:exported="false" />
+        <activity android:name=".SelectProductActivity" android:exported="false" />
+        <activity android:name=".AddPromotionActivity" android:exported="false" />
+        <activity android:name=".StaffListActivity" android:exported="false" />
+        <activity android:name=".StaffActivity" android:exported="false" />
+        <activity android:name=".AdminFragment.ContactFragment" android:exported="false" />
+        <activity android:name=".AdminFragment.HomeFragment" android:exported="false" />
+        <activity android:name=".AdminActivity" android:exported="false" />
+        <activity android:name=".LoginActivity" android:exported="false" />
+        <activity android:name=".StartActivity" android:exported="false" /> <!-- ✅ Đã thêm -->
+        <activity android:name=".MainActivity" android:exported="false" />
+        <activity android:name=".SplashActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+    </application>
 </manifest>
