--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.datn_md02_admim"
-        minSdk 35
+        minSdk 31
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -55,5 +55,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     implementation 'androidx.core:core:1.12.0'
     implementation 'com.google.firebase:firebase-messaging:23.0.8' // <- Thêm dòng này
+    implementation 'com.squareup.picasso:picasso:2.8'
 
 }
