--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,18 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.DATN_MD02_ADMIM"
         tools:targetApi="31">
         <activity
-            android:name=".AddEditFurnitureActivity"
+            android:name=".OrderDetailActivity"
             android:exported="false" />
-        <!-- Firebase Cloud Messaging Service -->
+        <activity
+            android:name=".AddEditFurnitureActivity"
+            android:exported="false" /> <!-- Firebase Cloud Messaging Service -->
         <service
             android:name=".MyFirebaseMessagingService"
             android:exported="false">
