--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
@@ -30,31 +31,35 @@ android {
 }
 
 dependencies {
+    // Firebase BOM - đồng bộ phiên bản các thư viện Firebase
+    implementation platform('com.google.firebase:firebase-bom:33.15.0')
 
+    // Firebase core features
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.google.firebase:firebase-messaging' // ✅ để nhận thông báo đẩy
+
+    // AndroidX và Material Design
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation 'androidx.fragment:fragment:1.6.1'
+    implementation 'androidx.core:core:1.12.0'
+    implementation 'com.google.android.material:material:1.11.0'
+
+    // Thư viện hình ảnh
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+    implementation 'com.squareup.picasso:picasso:2.8'
+
+    // Biểu đồ
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    // Unit Test
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-    implementation platform('com.google.firebase:firebase-bom:33.15.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation platform('com.google.firebase:firebase-bom:33.15.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-database'
-    implementation 'androidx.fragment:fragment:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-
-    implementation 'com.github.bumptech.glide:glide:4.15.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
-    implementation 'com.google.firebase:firebase-storage'
-    implementation 'com.github.bumptech.glide:glide:4.15.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
-    implementation 'androidx.core:core:1.12.0'
-    implementation 'com.google.firebase:firebase-messaging:23.0.8' // <- Thêm dòng này
-    implementation 'com.squareup.picasso:picasso:2.8'
-
 }
