Fix lỗi thông báo

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.datn_md02_admim"
-        minSdk 31
+        minSdk 33
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -28,6 +28,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+
+    packagingOptions {
+        resources {
+            excludes += ['META-INF/NOTICE.md', 'META-INF/LICENSE.md', 'META-INF/LICENSE', 'META-INF/DEPENDENCIES']
+        }
+    }
+    buildToolsVersion '34.0.0'
 }
 
 dependencies {
@@ -62,4 +69,49 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    implementation platform('com.google.firebase:firebase-bom:33.15.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-functions'
+
+    implementation 'com.sun.mail:android-mail:1.6.7'
+    implementation 'com.sun.mail:android-activation:1.6.7'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.google.firebase:firebase-storage:20.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation("com.squareup.okhttp3:okhttp:4.6.0")
+    implementation("commons-codec:commons-codec:1.14")
+
+    implementation 'com.google.code.gson:gson:2.10.1'
+    // Firebase Realtime Database (nếu đang dùng rồi)
+    implementation 'com.google.firebase:firebase-database:20.1.0'
+    // Firebase Cloud Messaging
+    implementation 'com.google.firebase:firebase-messaging:23.1.0'
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
+    implementation 'com.onesignal:OneSignal:5.1.7'
+    implementation 'me.pushy:sdk:1.0.81' // ← Phải có dòng này
+    implementation 'org.json:json:20231013'
+    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // OkHttp + logging interceptor
+    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+
+    // Firebase Messaging (nếu dùng)
+    implementation 'com.google.firebase:firebase-messaging:23.1.0'
+
+
+    implementation 'com.google.firebase:firebase-messaging:21.1.0'
+    implementation 'com.pusher:push-notifications-android:1.9.0'
+    implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
+    implementation "androidx.work:work-runtime:2.9.0"
 }
